--- a/iptv/eeetv/.config/mpv/mpv.conf
+++ b/iptv/eeetv/.config/mpv/mpv.conf
@@ -15,10 +15,18 @@ osd-align-x=right
 osd-scale=2
 volume=100
 no-keepaspect
-playlist-pos=5
+playlist-start=5
 #input-ar-delay=3000
 #input-ar-rate=1
 #input-file=/dev/input/event11
 #cache-default=75000
+#cache-initial=4096
 cache-backbuffer=0
 #cache-file=TMP
+#cache-secs=55
+#cache-file=TMP
+#keep-open=always
+#demuxer-readahead-secs=50
+#demuxer-lavf-o=hls_allow_cache=1
+#demuxer-lavf-o=hls_init_time=15
+#demuxer-lavf-o=hls_time=20
