keep-open to stay on broken stream

--- a/iptv/eeetv/.config/mpv/mpv.conf
+++ b/iptv/eeetv/.config/mpv/mpv.conf
@@ -25,7 +25,8 @@ cache-backbuffer=0
 #cache-file=TMP
 #cache-secs=55
 #cache-file=TMP
-#keep-open=always
+keep-open=always
+#reset-on-next-file=pause
 #demuxer-readahead-secs=50
 #demuxer-lavf-o=hls_allow_cache=1
 #demuxer-lavf-o=hls_init_time=15
